--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,9 @@
     <string name="nav_header_hello">Hello, %s</string>
     <string name="nav_header_peoples_around">Peoples around: %d</string>
 
-    <string name="nav_menu_global_chat">Global chat</string>
-    <string name="nav_menu_peoples">Peoples</string>
-    <string name="nav_menu_rooms">Rooms</string>
-    <string name="nav_menu_settings">Settings</string>
-    <string name="nav_menu_exit">Exit</string>
+    <string name="global_chat">Global chat</string>
+    <string name="peoples">Peoples</string>
+    <string name="rooms">Rooms</string>
+    <string name="settings">Settings</string>
+    <string name="exit">Exit</string>
 </resources>
