Listview for now show messages from down to up. Added settings fragment without functionality.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="rooms">Rooms</string>
     <string name="settings">Settings</string>
     <string name="exit">Exit</string>
+
+    <string name="settings_name">Name</string>
+    <string name="settings_name_summary">Name summary</string>
 </resources>
