--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,10 @@
     <string name="button_send">Send</string>
 
     <string name="nav_header_hello">Hello, %s</string>
-    <string name="nav_header_peoples_around">Peoples around: %d</string>
+    <string name="nav_header_people_around">People around: %d</string>
 
     <string name="global_chat">Global chat</string>
-    <string name="peoples">Peoples</string>
+    <string name="people">People</string>
     <string name="rooms">Rooms</string>
     <string name="settings">Settings</string>
     <string name="exit">Exit</string>
