--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,6 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
-
     <string name="edit_text_message_typehere">Type message here&#8230;</string>
     <string name="button_send">Send</string>
 
@@ -27,4 +25,5 @@
     <string name="_private">Private</string>
     <string name="new_room">New room</string>
     <string name="room_name_not_empty">Room name must not be empty</string>
+    <string name="profile_picture">Profile picture</string>
 </resources>
