Now people around displays correctly Added private rooms

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="new_room">New room</string>
     <string name="room_name_not_empty">Room name must not be empty</string>
     <string name="profile_picture">Profile picture</string>
+    <string name="choose_interlocutor">Choose at least one interlocutor</string>
 </resources>
