--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,7 @@
 
     <string name="preference_profile">Profile</string>
     <string name="preference_network">Network</string>
+    <string name="choose_action">Choose an action</string>
+    <string name="delete_message">Delete message</string>
+    <string name="star_message">Star message</string>
 </resources>
