--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,10 @@
     <string name="offline">Offline</string>
     <string name="online">Online</string>
     <string name="delete_messages">Delete messages</string>
+    <string name="rename_room">Rename room</string>
+    <string name="type_new_name">Type new name</string>
+    <string name="incorrect_name">Incorrect name</string>
+    <string name="you_sure">You sure?</string>
+    <string name="require_wifi">Application require Wi-Fi connection. Please, connect to the access point and restart</string>
+    <string name="delete_room">Delete room</string>
 </resources>
