--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,10 @@
     <string name="you_sure">You sure?</string>
     <string name="require_wifi">Application require Wi-Fi connection. Please, connect to the access point and restart</string>
     <string name="delete_room">Delete room</string>
+    <string name="notifications">Notifications</string>
+    <string name="enable_notifications">Enable notifications</string>
+    <string name="enable_sound">Enable sound</string>
+    <string name="enable_vibration">Enable vibration</string>
+    <string name="enable_led">Enable LED</string>
+    <string name="notification_ringtone">Notification ringtone</string>
 </resources>
