Fixed work with hotspot Private room creating fix Now private chat messaging disabled when participant offline

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -45,4 +45,5 @@
     <string name="notifications">Уведомления</string>
     <string name="choose_from_gallery">Выбрать из галереи</string>
     <string name="take_a_picture">Сделать фото</string>
+    <string name="profile_picture_summary">Изменить изображение профиля</string>
 </resources>
