--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="offline">Offline</string>
     <string name="online">Online</string>
     <string name="profile_picture">Profile picture</string>
+    <string name="profile_picture_summary">Change profile picture</string>
 
     <string name="choose_action">Choose an action</string>
     <string name="delete_message">Delete message</string>
